# primeagent

./: .gitignore  LICENSE  README.md  package.json  tsconfig.base.json
.github/workflows/: ci.yml  hardening.yml  security.yml  test.yml  v2-guards.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  bunfig.toml  index.ts  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/scripts/: check-fx-sources.ts  check-thinking-vs-responseformat.ts  get-deployer-jwt.ts
backend/src/__tests__/: setup.ts
backend/src/agent/: Strategy.ts  llm.ts  loop.ts  pnl.ts  rhChainSwapExecutor.ts  rhSwapPlanner.ts  riskCallbacks.ts  runtime.ts  snapshotBuilder.ts  var.ts
backend/src/config/: main-config.ts
backend/src/lib/: attestor.ts  crypto.ts  eip712.ts  logger.ts  marginEngine.ts  runtimeStore.ts  units.ts  viem.ts
backend/src/mcp/: client.ts  clientPool.ts  rateLimit.ts  server.ts  tools.ts
backend/src/middlewares/: authMiddleware.ts  security.ts
backend/src/routes/: agentActionsRoutes.ts  agentAuditRoutes.ts  agentChatRoutes.ts  agentFleetRoutes.ts  agentPolicyRoutes.ts  agentProposalsRoutes.ts  agentRoutes.ts  agentSimulatorRoutes.ts  agentStrategyRoutes.ts  fxRoutes.ts  opsRoutes.ts  paymasterRoutes.ts  pnlRoutes.ts  rhChainRoutes.ts  sse.ts
backend/src/services/: arbGasInfo.ts  arbSys.ts  auditPdf.ts  dssMemo.ts  orderIdempotency.ts  robinhoodOAuth.ts  webhookEmitter.ts
backend/src/utils/: errorHandler.ts
backend/src/workers/: attestPoster.ts  circuitBreaker.ts  errorLogCleanup.ts  onchainIndexer.ts  priceOraclePoster.ts  pricePointIndexer.ts  reputationFeedback.ts  siweNonceCleanup.ts  stylusHealthCheck.ts  tokenRefresher.ts  triggerWatcher.ts
contracts/: .gitignore  addresses.json  foundry.toml  package.json  remappings.txt  slither.config.json
contracts/script/: Deploy.s.sol  DeployMocks.s.sol  DeployRhChainSwap.s.sol  ExecuteJurisdictionFacetCut.s.sol  ExecutePolicyFacetUpgrade.s.sol  ProposeJurisdictionFacetCut.s.sol  RotateMarginEngine.s.sol  SeedLiquidity.s.sol  SetupTestnet.s.sol  Smoke.s.sol  UpgradePolicyFacet.s.sol  extract-addresses.mjs  jurisdiction_cut_proposed.json
contracts/src/core/: AgentRegistry.sol  AgentVault.sol  DiamondCutFacet.sol  DiamondInit.sol  DiamondLoupeFacet.sol  PositionNFT.sol  PrimeAgentDiamond.sol  PrimeAgentFactory.sol
contracts/src/dex/: V2Router.sol  V3Pool.sol  V3PositionManager.sol
contracts/src/interfaces/: IAgentVault.sol  IArbitrumOneAdapter.sol  IDiamondCut.sol  IDiamondLoupe.sol  IERC8004.sol  IEmergencyShutdown.sol  IErc7715PolicyAuditFacet.sol  IFeeCollector.sol  IJurisdictionPolicyFacet.sol  ILiquidationExecutor.sol  IPaymasterRelay.sol  IPriceOracle.sol  IPrimeAgentCallPolicyValidator.sol  IPrimeAgentDiamond.sol  IPrimeAgentFactory.sol  IPrimeAgentPreExecHook.sol  IRhChainSwap.sol  IRobinhoodChainAdapter.sol  IRobinhoodMcpAttestor.sol  IStakedValidator.sol  IV2Router.sol  IV3Pool.sol  IV3PositionManager.sol
contracts/src/libraries/: LibDiamond.sol  LibPolicy.sol  LibRiskPresets.sol
contracts/src/modules/: ArbitrumOneAdapter.sol  EmergencyShutdown.sol  Erc7715PolicyAuditFacet.sol  FeeCollector.sol  JurisdictionPolicyFacet.sol  PaymasterRelay.sol  PrimeAgentCallPolicyValidator.sol  PrimeAgentPreExecHook.sol  RhChainSwap.sol  RobinhoodChainAdapter.sol  RobinhoodMcpAttestor.sol
contracts/src/periphery/: LiquidationExecutor.sol  PriceOracle.sol
contracts/src/validation/: StakedValidator.sol
contracts/test/fork/: ArbitrumOneAdapter.fork.t.sol  RobinhoodChainAdapter.fork.t.sol
contracts/test/helpers/: MinimalDiamond.sol  SupportsInterfaceInit.sol
contracts/test/integration/: AttestorAdapterSwap.t.sol  CrossDomainMargin.t.sol  EmergencyShutdownE2E.t.sol  Erc7715GrantFlow.t.sol  FactoryFullDeploy.t.sol  Fixtures.sol  JurisdictionFacetCut.t.sol  JurisdictionPauseE2E.t.sol  LiquidationE2E.t.sol  PaymasterSponsorship.t.sol  SeedLiquidityE2E.t.sol  StakedValidatorChallenge.t.sol
contracts/test/invariants/: PolicyMonotonic.t.sol  PresetHashMonotonic.t.sol  TotalAssetsNonNegative.t.sol  WithdrawNeverPausable.t.sol  WithdrawNeverPausedByJurisdiction.t.sol
scripts/: prime-execute-cut.sh  prime-fund-demo-wallet.sh  prime-judge-drop.sh  prime-preflight.sh  prime-setup.sh
stylus/: .gitignore  Cargo.toml  Stylus.toml  rust-toolchain.toml
stylus/margin_engine/: Cargo.toml  Stylus.toml
stylus/margin_engine/src/: basket.rs  lib.rs  main.rs  tests.rs
stylus/quic_arithmetic/: Cargo.toml
stylus/quic_arithmetic/src/: lib.rs  tests.rs
stylus/risk_engine/: Cargo.toml  Stylus.toml
stylus/risk_engine/src/: lib.rs  main.rs  tests.rs
stylus/risk_engine/tests/: var_invariant.rs
stylus/script/: env.template  init_margin_engine_arb_sepolia.sh  init_risk_engine_arb_sepolia.sh  verify_margin_engine.sh  verify_risk_engine.sh
web/: .env.example  .gitignore  package.json  playwright.config.ts  vercel.json
web/e2e/: audit-export.spec.ts  demo-mode.spec.ts  drill.spec.ts  dss-memo.spec.ts  fleet-vote.spec.ts  fleet.spec.ts  gbp-toggle.spec.ts  happy-path.spec.ts  jurisdiction-pause.spec.ts  policy-draft.spec.ts  policy-rotation.spec.ts  policy-timeline.spec.ts  strategy-propose.spec.ts  whatif-simulator.spec.ts
web/public/: manifest.json
web/scripts/: check-csp.ts
web/src/: config.ts  env.ts  routeTree.gen.ts  router.tsx  styles.css
(+224 files in other folders)
