[package]
name = "quic_arithmetic"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "PrimeAgent Q96.48 fixed-point shared library (Stylus). See PrimeAgent.md section 8.3."

[lib]
crate-type = ["lib"]

[dependencies]
alloy-primitives = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
