[package]
name = "risk_engine"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "PrimeAgent risk engine: Monte Carlo VaR + EWMA correlation (Stylus). See PrimeAgent.md section 8.5."

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
stylus-sdk = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
quic_arithmetic = { path = "../quic_arithmetic" }

[dev-dependencies]
stylus-sdk = { workspace = true, features = ["stylus-test"] }
proptest = { workspace = true }
# Integration tests under `tests/` (e.g. var_invariant.rs) are compiled as
# separate binaries and need explicit re-declarations of the runtime
# types they touch. Use the workspace pin so cargo unifies features
# between the lib build and the test build, avoiding "two versions of
# crate ruint / alloy_primitives" errors at the test-binary boundary.
alloy-primitives = { workspace = true }
quic_arithmetic = { path = "../quic_arithmetic" }

[features]
default = []
export-abi = ["stylus-sdk/export-abi"]
contract-client-gen = []

[lints.rust]
# `deny`, not `forbid`, because the cargo-stylus bin shim in `src/main.rs`
# must `#[no_mangle]` its `main` symbol and rustc now treats `no_mangle` as
# an unsafe-attribute. Library code keeps `unsafe_code` forbidden via
# `#![forbid(unsafe_code)]` at the top of `src/lib.rs`; only main.rs
# locally `#![allow(unsafe_code)]`.
unsafe_code = "deny"
